# slide-doctor

./: .gitignore  README.md  full_workflow.py  get_images.py  gradio_interface.py  hello.py  pyproject.toml
archive/: 0_call_mistral.py  async_alternative.py  get_images.py
config/: checkers_house_style.yaml  config.yaml
data/: 01-coastal-presentation.yaml  02-climate-initiatives.yaml  03-dickinson-basic.pptx  03-dickinson-basic.yaml  03-dickinson-basic_fixed.pptx  dickinson_basic1.pptx  ~$dickinson_basic1.pptx
scripts/: async_alternative.py  brave_fact_checker.py  config_preview.py  deduplicate_issues.py  example_extraction.py  example_extraction_async.py  full_workflow.py  mistral_extraction_fact_checker.py  mistral_text_extraction.py  new_client.py  pixtral_async_alternative.py  run_evals.py  slides_text.py  test_chartchecker.py  test_spellchecker.py  update_slide.py
utils/: __init__.py  client.py  deduplication.py  image_utils.py  interface.py  mocks.py  models.py  new_interface.py  pptx_utils.py  prompts.py  screenshots.py  utils.py
