[project]
name = "slide-doctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncio>=3.4.3",
    "langchain>=0.3.2",
    "langchain-mistralai>=0.2.0",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "python-pptx>=1.0.2",
    "fitz>=0.0.1.dev2",
    "pydantic>=2.9.2",
]
