[project]
name = "slide-doctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "langchain>=0.3.2",
    "langchain-mistralai>=0.2.0",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "python-pptx>=1.0.2",
    "fitz>=0.0.1.dev2",
    "pydantic>=2.9.2",
    "instructor>=1.5.1",
    "mistralai>=1.1.0",
    "datetime>=5.5",
    "langchain-community>=0.3.1",
    "langchain-openai>=0.2.2",
    "tenacity>=8.5.0",
]
